syntax = "proto3";

package newClient;

option go_package = "github.com/mlops-eval/data-dispatcher-service/src/pb";

// Client Notification service definition
service ClientNotificationService {
  // Notify the service about a new authenticated client that needs data streaming
  rpc NotifyNewClient(NewClientRequest) returns (NewClientResponse);
  
  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request message when a new client is authenticated and ready to receive data
message NewClientRequest {
  string client_id = 1;
  string routing_key = 2;
  string outputs_queue_calibration = 3;
  string inputs_queue_calibration = 4;
}
// Response message acknowledging the new client notification
message NewClientResponse {
  string status = 1;       // Status of the operation (e.g., "OK", "ERROR")
  string message = 2;      // Optional message or error description
}

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  string status = 1;  // "SERVING", "NOT_SERVING", "SERVICE_UNKNOWN"
  string message = 2;
} 